# http_server

./: CMakeLists.txt  Makefile  catch_strace.sh  fd_pass.c  fd_pass.h  main.c  server  worker.c
src/: fd_pass.c  main.c  simple.c  worker.c  worker.h
